--- a/install
+++ b/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env stack
 {- stack script
-    --resolver lts-13.2
+    --resolver lts-13.6
     --package directory
     --package executable-path
     --package shake
@@ -23,7 +23,7 @@
 -- |
 -- Module:      Main
 -- Description: Install Command Wrapper, its documentation, and required tools.
--- Copyright:   (c) 2018 Peter Trško
+-- Copyright:   (c) 2018-2019 Peter Trško
 -- License:     BSD3
 --
 -- Maintainer:  peter.trsko@gmail.com
